--- a/agent/static/css/chat.css
+++ b/agent/static/css/chat.css
@@ -12,3 +12,28 @@
 .chat-messages {
     min-height: 800px;
 }
+
+.chat-message {
+    margin-bottom: 16px;
+    border-radius: 8px;
+    padding: 12px 16px 8px 16px;
+    width: 75%;
+}
+
+.chat-message p {
+    padding 0;
+    margin: 0;
+    margin-bottom: 4px;
+}
+
+.chat-messages .agent {
+    color: #2c3e50;
+    background-color: #dee2e6;
+    border: 1px solid #ced4da;
+}
+
+.chat-messages .user {
+    background-color: #f8f9fa;
+    border: 1px solid #ecf0f1;
+    margin-left: 25%;
+}
